--- a/index.html
+++ b/index.html
@@ -1,27 +1,4 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>My Simple HTML Page</title>
-  </head>
-  <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple web page created using only HTML.</p>
-
-    <h2>About Me</h2>
-    <p>I am learning how to build websites using HTML.</p>
-
-    <h2>My Hobbies</h2>
-    <ul>
-      <li>Reading</li>
-      <li>Coding</li>
-      <li>Traveling</li>
-    </ul>
-
-    <h2>Contact</h2>
-    <p>Email: myemail@example.com</p>
-    <p>Phone: +123-456-7890</p>
-
-    <h2>Links</h2>
-    <p>Visit my <a href="https://example.com" target="_blank">profile</a>.</p>
-  </body>
+  <body> kongunadu</body>
+  <h1>Thottaiam</h1>
 </html>
